versions/v2.8/modules/en/pages/cluster-admin/manage-clusters/persistent-storage/manage-persistent-storage.adoc
= Create Kubernetes Persistent Volumes and Storage Classes
:page-languages: [en, zh]
:revdate: 2025-06-20
:page-revdate: {revdate}
:description: Learn about the two ways with which you can create persistent storage in Kubernetes: persistent volumes and storage classes

When deploying an application that needs to retain data, you'll need to create persistent storage. Persistent storage allows you to store application data external from the pod running your application. This storage practice allows you to maintain application data, even if the application's pod fails.

The documents in this section assume that you understand the Kubernetes concepts of persistent volumes, persistent volume claims, and storage classes. For more information, refer to the section on xref:cluster-admin/manage-clusters/persistent-storage/about-persistent-storage.adoc[how storage works.]

== Prerequisites

To set up persistent storage, the `Manage Volumes` xref:rancher-admin/users/authn-and-authz/manage-role-based-access-control-rbac/cluster-and-project-roles.adoc#_project_role_reference[role] is required.

If you are provisioning storage for a cluster hosted in the cloud, the storage and cluster hosts must have the same cloud provider.

For provisioning new storage with Rancher, the cloud provider must be enabled. For details on enabling cloud providers, refer to xref:cluster-deployment/set-up-cloud-providers/set-up-cloud-providers.adoc[this page.]

For attaching existing persistent storage to a cluster, the cloud provider does not need to be enabled.

== Setting up Existing Storage

The overall workflow for setting up existing storage is as follows:

. Set up your persistent storage. This may be storage in an infrastructure provider, or it could be your own storage.
. Add a persistent volume (PV) that refers to the persistent storage.
. Add a persistent volume claim (PVC) that refers to the PV.
. Mount the PVC as a volume in your workload.

For details and prerequisites, refer to xref:cluster-admin/manage-clusters/persistent-storage/set-up-existing-storage.adoc[this page.]

== Dynamically Provisioning New Storage in Rancher

The overall workflow for provisioning new storage is as follows:

. Add a StorageClass and configure it to use your storage provider. The StorageClass could refer to storage in an infrastructure provider, or it could refer to your own storage.
. Add a persistent volume claim (PVC) that refers to the storage class.
. Mount the PVC as a volume for your workload.

For details and prerequisites, refer to xref:cluster-admin/manage-clusters/persistent-storage/dynamically-provision-new-storage.adoc[this page.]

== {longhorn-product-name} Storage

https://documentation.suse.com/cloudnative/storage/{longhorn-docs-version}/en/longhorn-documentation.html[{longhorn-product-name}] is a lightweight, reliable and easy-to-use distributed block storage system for Kubernetes.

Longhorn is free, open source software. Originally developed by Rancher Labs, it is now being developed as a sandbox project of the Cloud Native Computing Foundation. It can be installed on any Kubernetes cluster with Helm, with kubectl, or with the Rancher UI.

If you have a pool of block storage, Longhorn can help you provide persistent storage to your Kubernetes cluster without relying on cloud providers. For more information about Longhorn features, refer to the https://documentation.suse.com/cloudnative/storage/{longhorn-docs-version}/en/introduction/introduction.html[documentation.]

Rancher v2.5 simplified the process of installing Longhorn on a Rancher-managed cluster. For more information, see xref:integrations/longhorn/longhorn.adoc[Cloud Native Storage with Longhorn].

== Provisioning Storage Examples

We provide examples of how to provision storage with xref:cluster-admin/manage-clusters/persistent-storage/examples/nfs-storage.adoc[NFS,] xref:cluster-admin/manage-clusters/persistent-storage/examples/vsphere-storage.adoc[vSphere,] and xref:cluster-admin/manage-clusters/persistent-storage/examples/persistent-storage-in-amazon-ebs.adoc[Amazon's EBS.]

== GlusterFS Volumes

In clusters that store data on GlusterFS volumes, you may experience an issue where pods fail to mount volumes after restarting the `kubelet`. For details on preventing this from happening, refer to xref:cluster-admin/manage-clusters/persistent-storage/about-glusterfs-volumes.adoc[this page.]

== iSCSI Volumes

In xref:cluster-deployment/launch-kubernetes-with-rancher.adoc[Rancher Launched Kubernetes clusters] that store data on iSCSI volumes, you may experience an issue where kubelets fail to automatically connect with iSCSI volumes. For details on resolving this issue, refer to xref:cluster-admin/manage-clusters/persistent-storage/install-iscsi-volumes.adoc[this page.]

== hostPath Volumes

Before you create a hostPath volume, you need to set up an https://rancher.com/docs/rke/latest/en/config-options/services/services-extras/#extra-binds/[extra_bind] in your cluster configuration. This will mount the path as a volume in your kubelets, which can then be used for hostPath volumes in your workloads.

== Migrating VMware vSphere Cloud Provider from In-tree to Out-of-tree

Kubernetes is moving away from maintaining cloud providers in-tree. vSphere has an out-of-tree cloud provider that can be used by installing the vSphere cloud provider and cloud storage plugins.

For instructions on how to migrate from the in-tree vSphere cloud provider to out-of-tree, and manage the existing VMs post migration, refer to xref:cluster-deployment/set-up-cloud-providers/configure-out-of-tree-vsphere.adoc[this page.]

== Related Links

* https://kubernetes.io/docs/concepts/storage/[Kubernetes Documentation: Storage]
